# no.1-markdown-editor-v2

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
docs/: ai-integration-spec.md  code-refactor-checklist.md  paragraph-and-line-breaks-spec.md  product-priority-checklist.md  qiita-export-clipboard-ja.md  qiita-find-replace-ja.md  qiita-focus-mode-ja.md  qiita-image-handling-ja.md  qiita-keyboard-shortcuts-ja.md  qiita-layout-resize-handles-ja.md  qiita-mermaid-ja.md  qiita-outline-sync-navigation-ja.md  qiita-syntax-highlighter-ja.md  qiita-wysiwyg-ja.md  release-notes-draft.md
scripts/: advance-release-draft.mjs  build-release-body.mjs  generate-katex-inline-css.mjs  package-win.cmd  package-win.ps1  prepare-release.mjs  run-ai-i18n-smoke.mjs  run-ai-smoke.mjs  run-copy-smoke.mjs  run-paste-smoke.mjs  run-smoke.mjs  run-source-interaction-smoke.mjs  run-tauri.mjs  run-tests.mjs  validate-release.mjs
src/: App.tsx  global.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  lib.rs  pdf_export.rs  update.rs
src/hooks/: useAutoSave.ts  useCommands.ts  useDocumentDrop.ts  useExport.ts  useExternalFileChanges.ts  useFileOps.ts  useFileTree.ts  useMarkdown.ts  useRecentFiles.ts  useWorkspaceIndex.ts  useWorkspaceSearch.ts
src/i18n/: index.ts
src/lib/: clipboardHtml.ts  documentLanguage.ts  documentPersistence.ts  draftRecovery.ts  editorFocus.ts  editorHistory.ts  editorScroll.ts  editorStateCache.ts  editorStats.ts  (+50 more)
tests/: ai-apply-selection.test.ts  ai-apply.test.ts  ai-command-and-selection-flow.test.ts  ai-completion-gates.test.ts  ai-composer-font-size.test.ts  ai-context.test.ts  ai-explain-and-results.test.ts  ai-explain-entrypoints.test.ts  ai-fallback-and-errors.test.ts  ai-flow-wiring.test.ts  ai-history-retrieval.test.ts  ai-history-workspace-facet.test.ts  ai-history-workspace-handoff.test.ts  ai-i18n-completeness.test.ts  ai-opening.test.ts  ai-prompt.test.ts  ai-provider.test.ts  ai-result-views.test.ts  ai-retrieval-metadata.test.ts  ai-sidebar-panel.test.ts  ai-store-slices-wiring.test.ts  ai-store.test.ts  ai-structure-compat.test.ts  ai-template-library.test.ts  ai-ui-wiring.test.ts  ai-wiring.test.ts  ai-workspace-execution.test.ts  clipboard-html.test.ts  command-palette-layout.test.ts  document-language.test.ts  document-persistence.test.ts  document-tabs-layout.test.ts  draft-recovery.test.ts  editor-copy-wiring.test.ts  editor-enter-continue-markup.test.ts  editor-focus-wiring.test.ts  editor-font-ligatures.test.ts  editor-font-size.test.ts  editor-history-provenance.test.ts  editor-history-shortcuts.test.ts  (+83 more)
(+97 files in other folders)
