[package]
name = "no1-markdown-editor"
version = "0.20.0"
description = "No.1 Markdown Editor — Free Forever"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4.44"
ring = "0.17.14"
sha2 = "0.10.9"
keyring = { version = "3.6", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
semver = "1"
tokio = { version = "1", features = ["rt", "sync"] }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = "2"

[target."cfg(windows)".dependencies]
webview2-com = "0.37"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKNavigation", "WKPDFConfiguration", "block2"] }
block2 = "0.6"

[target."cfg(target_os = \"linux\")".dependencies]
webkit2gtk = "2.0"
gtk = "0.18"
glib = "0.18"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
